# mmsearch

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: SETUP.md  TROUBLESHOOTING.md
src/mmsearch/: __init__.py  auth.py  cli.py  client.py  config.py  db.py  search.py  sync.py  tokens.py
tests/: test_auth.py  test_cli.py  test_config.py  test_db.py  test_search.py  test_sync.py  test_tokens.py
